--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       db:
           condition: service_healthy
-          restart: true
+    restart: always
     env_file:
       - .env
   db:
